@@ -24,7 +24,7 @@ $latestVersionInBranch   = $versionInfo?->latest;
 $minimumSupportedBranch  = $phpVersion?->getMinimumSupportedBranch();
 $isUnknown               = $versionInfo?->unknown;
 $isOutOfDate             = $versionInfo?->eol;
-$isLatestVersionInBranch = version_compare($php, $latestVersionInBranch, 'ge');
+$isLatestVersionInBranch = version_compare($php, $latestVersionInBranch ?? '0.0.0', 'ge');
 $isLatestBranch          = $phpBranch === $phpVersion->getLatestBranch();
 $isRecommendedBranch     = $phpBranch === $phpVersion->getRecommendedSupportedBranch();
 $isOldestBranch          = $phpBranch === $minimumSupportedBranch;
@@ -57,7 +57,16 @@ $hasError                = !empty(trim($this->siteConfig->get('core.lastErrorMes
         </div>
 
         {{-- PHP Status --}}
-        @if($isUnknown)
+        @if($php === '0.0.0' || $php === null)
+            <div class="alert alert-info">
+                <h3 class="alert-heading h5 m-0 mb-2">
+                    <span class="fa fa-question-circle" aria-hidden="true"></span>
+                    @lang('PANOPTICON_SITE_LBL_PHP_MISSING')
+                </h3>
+
+                @lang('PANOPTICON_SITE_LBL_PHP_MISSING_INFO')
+            </div>
+        @elseif($isUnknown)
             <div class="alert alert-info">
                 <h3 class="alert-heading h5 m-0 mb-2">
                     <span class="fa fa-question-circle" aria-hidden="true"></span>
