@@ -798,6 +798,8 @@ PANOPTICON_SITE_ERR_JUPDATE_SCHEDULE_FAILED="Scheduling the Joomla core update h
 PANOPTICON_SITE_LBL_JUPDATE_SCHEDULE_ERROR_CLEARED="The scheduling error has been cleared."
 PANOPTICON_SITE_LBL_JUPDATE_SCHEDULE_ERROR_NOT_CLEARED="The scheduling error could not be cleared: %s"
 PANOPTICON_SITE_LBL_JUPDATE_HEAD="Joomla!&reg; Update"
+PANOPTICON_SITE_LBL_JUPDATE_NO_VERSION_HEAD="Version information missing"
+PANOPTICON_SITE_LBL_JUPDATE_NO_VERSION_BODY="Your site has not reported the version of Joomla!&reg; it is running on."
 PANOPTICON_SITE_BTN_JUPDATE_RELOAD="Reload Joomla!&reg; Update information"
 PANOPTICON_SITE_BTN_JUPDATE_RELOAD_SR="Reload Joomla!&reg; Update information for site “%s”"
 PANOPTICON_SITE_LBL_JUPDATE_LAST_CHECKED="Last checked:"
@@ -854,6 +856,8 @@ PANOPTICON_SITE_LBL_WPUPDATE_UNSCHEDULE_ERR_NOT_SCHEDULED="There is no scheduled
 PANOPTICON_SITE_LBL_WPUPDATE_UNSCHEDULE_ERR_RUNNING="The scheduled update is already running."
 PANOPTICON_SITE_ERR_WPUPDATE_UNSCHEDULE_FAILED="Could not cancel the WordPress core update."
 PANOPTICON_SITE_LBL_WPUPDATE_HEAD="WordPress Update"
+PANOPTICON_SITE_LBL_WPUPDATE_NO_VERSION_HEAD="Version information missing"
+PANOPTICON_SITE_LBL_WPUPDATE_NO_VERSION_BODY="Your site has not reported the version of WordPress it is running on."
 PANOPTICON_SITE_LBL_WPUPDATE_AVAILABLE_UPDATE="WordPress %s is available"
 PANOPTICON_SITE_LBL_WPUPDATE_CURRENT_VERSION="Your site is currently using WordPress %s."
 PANOPTICON_SITE_LBL_WPUPDATE_IS_PATCH_RELEASE="This is a patch (point) update which is almost always safe."
@@ -889,6 +893,8 @@ PANOPTICON_SITE_LBL_PHP_HEAD="PHP"
 PANOPTICON_SITE_BTN_PHP_RELOAD="Reload PHP Information"
 PANOPTICON_SITE_BTN_EXTENSIONS_RELOAD="Reload Extensions Information"
 PANOPTICON_SITE_BTN_EXTENSIONS_RELOAD_SR="Reload Extensions Information for site “%s”"
+PANOPTICON_SITE_LBL_PHP_MISSING="PHP version information missing"
+PANOPTICON_SITE_LBL_PHP_MISSING_INFO="Your site has not reported the version of PHP it is running on."
 PANOPTICON_SITE_LBL_PHP_UNKNOWN="Unknown PHP %s"
 PANOPTICON_SITE_LBL_PHP_UNKNOWN_INFO="Your version of PHP is not known to Panopticon. Try clearing the <code>cache</code> folder."
 PANOPTICON_SITE_LBL_PHP_EOL="End-of-Life PHP %s"
