@@ -2,6 +2,7 @@
 Akeeba Panopticon 1.2.3
 ================================================================================
 # [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
+# [HIGH] PHP error when WordPress fails to provide version information
 
 Akeeba Panopticon 1.2.2
 ================================================================================
